removed unnecessary comment & white space / added background to improve readability of text / remove ID classes to replace them with correct HTML

--- a/css/style.css
+++ b/css/style.css
@@ -1,208 +1,179 @@
 * {
-	box-sizing:border-box;
-	font-family:arcadeclassic;
-	color:white;
-	cursor:url("../images-logo/cursor-spaceship-medium.png"),auto;
+	box-sizing: border-box;
+	font-family: arcadeclassic;
+	color: #FFFFFF;
+	cursor: url("../images-logo/cursor-spaceship-medium.png"),auto;
 }
 
 @font-face {
-  font-family: arcadeclassic;
-  src: url("../arcadeclassic/arcadeclassic.ttf");
+	font-family: arcadeclassic;
+	src: url("../arcadeclassic/arcadeclassic.ttf");
 }
 
 body {
-	
-	background-image:url("../images-logo/planet2.png");
+	background-image: url("../images-logo/planet2.png");
 	background-size: 2200px 1122px;
-	background-repeat: no-repeat;
+	background-repeat: repeat;
 	background-blend-mode: multiply;
-	
 }
 
 .current {
-	border-top:2px solid white;
-	border-bottom:2px solid white;
+	border-top: 2px solid #FFFFFF;
+	border-bottom: 2px solid #FFFFFF;
 }
 
 .container {
-	display:flex;
-	justify-content:space-between;
-	width:80%;
-	margin-left: auto;
-	margin-right:auto;
+	display: flex;
+	justify-content: space-between;
+	width: 80%;
+	margin: 0 auto;
 }
 
 .link {
-	display:flex;
-	justify-content:flex-end;
+	display: flex;
+	justify-content: flex-end;
 }
 
-/*------------------Navbar start here------------------*/
 
 .navbar {
 	margin-top: 20px;
-	background-color:none;
 }
+
 .navbar h1 {
-	border-left:3px solid white;
+	border-left: 3px solid #FFFFFF;
 	text-align: right;
 	width: 5rem;
-	padding:10px;
-	margin-right:20px;
+	padding: 10px;
+	margin-right: 20px;
 }
 
 .navlink {
-	display:inline-block;
-	margin-top:auto;
-	margin-bottom:auto;
-	margin-right:10px;
-	padding-top:5px;
+	display: inline-block;
+	margin: auto auto;
+	padding-top: 5px;
 	width: 6rem;
 	height: 2rem;
-	font-size:1rem;
-	text-align:center;
-	text-decoration:none;
-	
+	font-size: 1rem;
+	text-align: center;
+	text-decoration: none;
 }
 
-a:active{
-	border-top:2px solid white;
+a:active {
+	border-top: 2px solid #FFFFFF;
 }
 
 a::after {
-	content:'';
-	display:block;
-	width:0;
-	height:2px;
-	background-color:white;
+	content: '';
+	display: block;
+	width: 0;
+	height: 2px;
+	background-color: #FFFFFF;
 	transition: width .4s
 }
 
 a:hover::after {
-	width:100%;
+	width: 100%;
 	transition: width .4s;
 }
-/*------------------Body Main start here------------------*/
+
 main {
-	position:relative;
+	position: relative;
+	height: auto;
+	
 }
 
 .content-box {
-	width:29rem;
-	margin:auto auto;
-	padding-top:10px;
+	width: 29rem;
+	margin: auto auto;
+	padding-top: 10px;
     text-align: center;
     text-justify: inter-word;
-	letter-spacing:0.11rem;
-	font-size:1.4rem;
+	letter-spacing: 0.11rem;
+	font-size: 1.4rem;
 }
 /*-----------------------HOME / INDEX SECTION---------------------*/
-
 .border {
 	border: 10px solid transparent;
 	border-image: url("../images-logo/border2.png") 10% stretch;	
+	background-color: #00000090;
+	margin-bottom:20px;
 }
-
 #index-body-image {
-	height:38rem;
+	height: 38rem;
 }
-
 /*-----------------------PORTFOLIO SECTION---------------------*/
-
 .planet-projet {
-	margin-top:50px;
-	padding-left:auto;
-	padding-right:auto;
+	margin-top: 50px;
+	padding: 0 auto;
 	position: relative;
 	height: 100%;
-	width:40%;
-	/*overflow:hidden;*/
-	transition-timing-function: ease-in;
-	transition-duration: 1s;
-	transition-property: width;
-	
+	width: 40%;
 }
 
 .planet-projet h3 {
-	border-bottom:2px solid white;
-	width:108px;
+	border-bottom:2px solid #FFFFFF;
+	width: 108px;
 }
 
 .project-p {
-	border-top: 2px solid white;
-	border-bottom: 2px solid white;
-	width:70%;
-	text-align:center;
-	position:absolute;
-	top: 0px;
-	left:150px;
+	padding: 8px;
+	border: 10px solid transparent;
+	border-image: url("../images-logo/border2.png") 10% stretch;	
+	width: 70%;
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 150px;
 	border-radius: 15px;
+	background-color: #00000090;
 }
 
 .planet-projet img {
-	width:7rem;
-	border:8px solid transparent;
+	width: 7rem;
+	border: 8px solid transparent;
 	border-image: url("../images-logo/border2.png") 10% stretch;
 }
 
-#projet-left {
-	text-align:left;
-	padding-left:5px;
-	position:relative;
-	left:2%;
+.projet-left {
+	text-align: left;
+	padding-left: 5px;
+	position: relative;
+	left: 2%;
 }
 
 
-#projet-right {
-	text-align:left;
-	padding-left:5px;
-	position:relative;
-	left:50%;
+.projet-right {
+	text-align: left;
+	padding-left: 5px;
+	position: relative;
+	left: 50%;
 }
-
-/*.planet-projet:hover {
-	width:40%;
-	height:30%;
-}*/
-
 /*-----------------------ABOUT ME SECTION---------------------*/
 #aboutme-body-image {
-	height:38rem;
+	height: 38rem;
 }
 
 .astronaute {
-	position:absolute;
-	top:75%;
-	left:50%;
+	position: absolute;
+	top: 73%;
+	left: 50%;
 }
 
 .aboutme {
-	padding:0 0;
+	padding: 0 0;
 	border: 10px solid transparent;
 	border-image: url("../images-logo/border2.png") 10% stretch;
-
-	
+	background-color: #00000090;
 }
 
 .aboutme {
 	overflow: auto;
-	height:70%;
+	height: 70%;
 }
-
-.aboutme-div {
-	position: relative;
-	
-}
-
-/*.aboutme:hover {
-	animation: dropdown 1.3s ease-in forwards;
-}*/
-
 /*-----------------------CONTACT ME SECTION---------------------*/
-
 #contact-box-title {
-	font-size:3rem;
-	width:27rem;
+	font-size: 3rem;
+	width: 27rem;
 	margin:auto auto;
     text-align: center;
     text-justify: inter-word;
@@ -211,71 +182,52 @@ main {
 #contact-body-image {
 	height: 34.3rem;
 }
+
+#content-box-p {
+	border: 10px solid transparent;
+	border-image: url("../images-logo/border2.png") 10% stretch;
+	background-color: #00000090;
+}
 /*------------------footer start here---------------------*/
 footer {
-	margin-top:15px;
-	border-top:2px solid white;
-	background-color:none;
-	
+	margin-top: 15px;
+	border-top: 2px solid #FFFFFF;
 }
 
 footer div p {
-	font-size:0.8rem;
+	font-size: 0.8rem;
 }
 
 .logo {
-	padding-left:auto;
-	width:48px;
-	height:46px;
+	padding-left: auto;
+	width: 48px;
+	height: 46px;
 }
 
-@keyframes dropdown {
-	100% {
-		height:30rem;
-	}
-}
-
-@media only screen and (max-width: 680px){
+@media only screen and (max-width: 680px) {
 	
 /*------------------------ INDEX / HOME PAGE ----------------------------------*/
 	h1 {
-		display:none;
+		display: none;
 	}
-	
 /*------------------------ PORTFOLIO PAGE ----------------------------------*/
 	.planet-projet {
-		width:100%;
-		height:30%;
+		width: 100%;
+		height: 30%;
+		margin-bottom: 30%;
 	}
 	
-	#projet-left {
-		text-align:left;
-		padding-left:15px;
-		position:relative;
-		left:0%;
+	.projet-left {
+		text-align: left;
+		padding-left: 15px;
+		position: relative;
+		left: 0%;
 	}
 
-
-	#projet-right {
-		text-align:left;
-		padding-left:15px;
-		position:relative;
-		left:0%;
+	.projet-right {
+		text-align: left;
+		padding-left: 15px;
+		position: relative;
+		left: 0%;
 	}
-	
-
-/*------------------------ ABOUT ME PAGE ----------------------------------*/
-	
-	
-
-/*------------------------ CONTACT PAGE ----------------------------------*/
-
-
 }
-
-
-/*Extra small <576px (small phones)
-Small ≥576px (phones)
-Medium ≥768px (tablets)
-Large ≥992px (laptops)
-Extra large ≥1200px (desktop monitors)*/
